--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@turf/turf": "^6.5.0",
     "@turf/transform-translate": "^6.5.0",
     "@turf/sector": "^6.5.0",
-    "exifreader": "^4.12.0"
+    "exifreader": "^4.12.0",
+    "deck.gl": "^8.9.7"
   },
   "devDependencies": {
     "typescript": "^4.9.3",
